# soc-alert-triage-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  detection-logic.md  scoring-model.md  usage.md
report/: tmp.md
sample-data/wazuh-alerts/: benign-powershell.json  local-account-creation.json  powershell-bypass.json  scheduled-task-registration.json  startup-folder-file-creation.json
sample-data/wazuh-alerts/failed-logon-burst/: failed-logon-01.json  failed-logon-02.json  failed-logon-03.json
scripts/: validate.py
src/soc_alert_triage_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/soc_triage/: batch.py  cli.py  detections.py  models.py  normalizer.py  report_generator.py  scoring.py  serializers.py
tests/: test_batch.py  test_detections.py  test_normalizer.py  test_report_generator.py  test_scoring.py  test_serializers.py
