[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-alert-triage-tool"
version = "0.1.0"
description = "A Python CLI tool for normalizing security alerts, calculating risk scores, and generating SOC triage reports."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
soc-triage = "soc_triage.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]